# bin-features-matching

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  hierarchical.cpp  hierarchical.h
report/: acronyms.tex  bibl.bib  medcomnet_v2.tex  report.tex  tikz-set.tex
report/figures/: perf.tex
report/figures/plots/versus_embbUdpIPI/1.0/: Band_allocation.tex  Delay_URLLC.tex  Delay_eMBB.tex  Packet_loss_URLLC.tex  Packet_loss_eMBB.tex  Throughput_URLLC.tex  Throughput_eMBB.tex  Throughput_eMBB_vs_delay_URLLC.tex
src/: hierarchical.cpp  hierarchical.h  tree.hh
